fix use where code editor would overflow

--- a/DevCenter/src/main/resources/css/prompto-ide.css
+++ b/DevCenter/src/main/resources/css/prompto-ide.css
@@ -26,7 +26,7 @@
     width: 80%;
     height: 100%;
     z-index: 1000;
-    padding: 0;
+    padding: 0 0 50px 0;
     border: 0;
     overflow: hidden;
 }
